# cvt-study

./: .gitignore  CHANGELOG.md  CODE_REVIEW_PHASE_1.md  CODE_REVIEW_PHASE_2_3.md  CODE_REVIEW_PHASE_4.md  CODE_REVIEW_PHASE_5.md  CODE_REVIEW_PHASE_6.md  DROP_IN_MANIFEST.json  DROP_IN_MANIFEST_V2.json  DROP_IN_MANIFEST_V3.json  DROP_IN_README.md  DROP_IN_README_V2.md  DROP_IN_README_V3.md  DROP_IN_README_V4.md  PHASE_0_CHECKPOINT.md  PHASE_1_CHECKPOINT.md  PHASE_2_CHECKPOINT.md  PHASE_3_CHECKPOINT.md  PHASE_4_CHECKPOINT.md  PHASE_5_CHECKPOINT.md  PHASE_6_CHECKPOINT.md  README.md  REAL_DATA_EXAMPLE_CHECKPOINT.md  ROADMAP.md  WORKING_PHASE_8_STATUS.md  pyproject.toml
docs/: CONSENSUS_CENTRELINE.md  DATA_HANDOFF_GUIDE.md  DEVELOPER_GUIDE.md  INPUT_CONTRACT.md  OUTPUT_REFERENCE.md  TELEMETRY_CLEANUP.md  (+3 more)
prototype/baja_track_validation/: .gitignore  README.md  pyproject.toml
prototype/baja_track_validation/docs/: ARCHITECTURE.md  METRIC_REFERENCE.md  REPRODUCIBILITY.md  SIMULATOR_INTERFACE.md
prototype/baja_track_validation/examples/: config.example.toml  obstacle_event_definitions_CLEANED.csv  obstacle_event_definitions_FILL.csv  reference_run_gps.csv  run_reference_full.sh
prototype/baja_track_validation/src/baja_track_analysis/: __init__.py  cli.py  config.py  definitions.py  exports.py  gate_study.py  gps_core.py  grouping.py  metrics.py  pipeline.py  signatures.py  simulation.py  telemetry.py  workflow.py
prototype/baja_track_validation/tests/: test_definitions.py  test_grouping.py  test_metrics.py  test_signatures.py  test_simulation.py  test_telemetry.py
(+263 files in other folders)
