[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cvt-track-study"
version = "0.8.0.dev0"
description = "Measured track-based drivetrain design framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "defusedxml>=0.7",
  "garmin-fit-sdk>=21.208.0",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cvt-study = "cvt_track_study.cli:main"
drivetrain-study = "cvt_track_study.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cvt_track_study = [
  "builtin_profiles/**/*.toml",
  "project_template/**/*.toml",
  "project_template/**/*.md",
  "project_template/**/.gitkeep",
  "bundle/*.json",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
