[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "baja-track-validation"
version = "0.3.0"
description = "Single-s GPS analysis and simulator validation targets for Baja SAE track studies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "openpyxl>=3.1",
]

[project.scripts]
baja-track = "baja_track_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
